tests/ui/frontmatter/frontmatter-invalid-after-comment.rs
// Comment

---
//~^ ERROR expected item, found `-`
---

#![feature(frontmatter)]

fn main() {
}
